--- a/src/app/mapas/components/full-screen/full-screen.component.html
+++ b/src/app/mapas/components/full-screen/full-screen.component.html
@@ -1,11 +1,2 @@
 
-<p>dfgdf</p>
-
-<div id='map' style='width: 400px; height: 300px;'></div>
-<script>
-  mapboxgl.accessToken = 'YOUR_MAPBOX_ACCESS_TOKEN';
-  var map = new mapboxgl.Map({
-    container: 'map',
-    style: 'mapbox://styles/mapbox/streets-v11'
-  });
-</script>
+<div id='map'></div>
