--- a/src/app/mapas/components/zoom-range/zoom-range.component.html
+++ b/src/app/mapas/components/zoom-range/zoom-range.component.html
@@ -1,1 +1,27 @@
-<p>zoom-range works!</p>
+<div #mapRange class="mapaRango"></div>
+<div class="row">
+    <div class="col-12">
+        <label class="form-label">
+            Zoom {{ zoomLevel | number:'2.0-2'}} - Lng,Lat: [ {{ myCenter[0] | number:'2.4-4' }} , {{ myCenter[1] | number:'2.4-4'}} ]              
+        </label>
+        <hr>       
+        <input type="range" 
+        class="form-range"
+        [value]="zoomLevel" 
+        min="4" max="18" 
+        (input)="zoomCambio( zoomInput.value )" 
+        #zoomInput>
+    </div>
+    <div class="col-12">
+        <button 
+        (click)="zoomOut()"
+        class="btn btn-primary btn-sm">
+            <i class="fa fa-minus"></i>
+        </button>
+        <button
+        (click)="zoomIn()" 
+        class="btn btn-primary btn-sm float-end">
+            <i class="fa fa-plus"></i>
+        </button>
+    </div>
+</div>
