--- a/src/app/shared/menu/menu.component.css
+++ b/src/app/shared/menu/menu.component.css
@@ -6,8 +6,9 @@
 li a.active{ 
 background-color:#ff6961;
 color: #ffffff;   
-animation: AnimateBG 1s ease-in alternate;    
+animation: AnimateBG 0.5s ease-in alternate;    
 }
 li  a {
 padding-left:10px;  
+color:rgba(0, 0, 0, 0.9);
 } 
