--- a/src/app/mapas/components/propiedades/propiedades.component.html
+++ b/src/app/mapas/components/propiedades/propiedades.component.html
@@ -1,1 +1,27 @@
-<p>propiedades works!</p>
+<div class="container-fluid">
+    <div class="row mt-5">
+        <div class="col-12">
+            <h1 class="text-center">Lista de Propiedades y Monumentos</h1>
+            <hr>
+        </div>  
+
+
+    </div>
+    <div class="row">
+        <div class="col-lg-3 col-sm-6 mb-2"
+        *ngFor="let propiedad of propiedades">
+            <div class="card">
+                <app-mini-mapa [lngLat]="propiedad.lngLat" class="card-img-top"></app-mini-mapa>                
+                <div class="card-body">
+                    <h5 class="card-title">
+                        {{ propiedad.titulo }}
+                    </h5>
+                    <p class="card-text">
+                        {{ propiedad.descripcion }}
+                    </p>
+                </div>
+            </div>
+        </div>  
+        
+    </div>
+</div>
